# libnn

./: .gitignore  .gitmodules  CMakeLists.txt  NN.sln  README.md
NN/: NN.vcxproj  NN.vcxproj.filters  base.h  main.cpp  nn.cpp  nn.h  nn_nodes.cpp  nn_nodes.h
NN/src/: gan.cpp  gan.h  main.cpp
NN/src/nn/: activations.cpp  activations.h  common.cpp  common.h  dense_layer.cpp  dense_layer.h  dropout.cpp  dropout.h  model.cpp  model.h  node.h  nodes.h  parallel.h  sequence.cpp  serialization.cpp  tensors.h
demo/: CMakeLists.txt  demo.cpp  generator.cpp  generator.h  models.qrc  python_interop.cpp  python_interop.h
enc_temp_folder/57299817f44e29714206a821d58897/: nn.cpp
include/nn/: activations.h  common.h  device.h  dropout.h  losses.h  model.h  optimizers.h  sequence.h  tensors.h  training.h
include/nn/node/: activations.h  debug.h  dense.h  dropout.h  node.h
include/nn/ops/: activations.h  debug.h  dense.h  dropout.h  node.h
pynn/: pynn.py  pynn.pyproj
sample/: gan.cpp  gan.h  main.cpp
samples/: CMakeLists.txt  gan.cpp  gan.h  mnist_classifier.cpp  mnist_gan.cpp  test_cuda.cu  xor.cpp
scripts/: .gitignore  dump_samples.py  gan_training.py  keras_dcgan_mnist.py  keras_gan_mnist.py
src/: activations.cpp  common.cpp  dense_layer.cpp  dropout.cpp  losses.cpp  losses.cu  model.cpp  model_serialization.cpp  model_serializer.cpp  sequence.cpp  training.cpp
src/device/: allocator.cpp  blas.cpp  context.cu  device.cpp  device_ops.cu  gpu.h  kernels.h  ops.cpp  ops.cu  ops.h  random.cu
src/node/: activations.cu  debug.cpp  dense.cu  dropout.cu
src/ops/: activations.cpp  activations.cu  debug.cpp  dense.cpp  dense.cu  dropout.cpp  dropout.cu
src/opt/: adam.cpp  adam.cu  sgd.cpp  sgd.cu
src/python/: module.cpp
